// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test all 1`] = `
"
// file: examples/01-introduction/01-basics/App.html
------------------------------
js   = 
------------------------------
css  = 
------------------------------
html = class=\\"lvudlntyf6k\\">Hello World!class=\\"lvudlntyf6k\\">

"
`;

exports[`test all 2`] = `
"
// file: examples/01-introduction/02-adding-data/App.html
------------------------------
js   = 
	let name = 'world';


------------------------------
css  = 
------------------------------
html = 

class=\\"4jd8n40uhgp\\">Hello \${name.toUpperCase()}!class=\\"4jd8n40uhgp\\">

"
`;

exports[`test all 3`] = `
"
// file: examples/01-introduction/03-dynamic-attributes/App.html
------------------------------
js   = 
	let src = '/tutorial/image.gif';
	let name = 'Rick Astley';


------------------------------
css  = 
------------------------------
html = 

class=\\"fmikm0roolj\\" \${{src}} alt=\\"\${name} dances.\\">

"
`;

exports[`test all 4`] = `
"
// file: examples/01-introduction/04-styling/App.html
------------------------------
js   = 
------------------------------
css  = 
	p {
		color: purple;
		font-family: 'Comic Sans MS'.efwx087582, cursive;
		font-size: 2em;
	}
.efwx087582
------------------------------
html = class=\\"efwx087582\\">This is a paragraph.class=\\"efwx087582\\">



"
`;
